fixing income_s_y and renameing value_x and value_y columns. First sreps of preprocessing also done.

--- a/project.ipynb
+++ b/project.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,9 +130,176 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sheet name from sheets_desc dict: Data. Sheet name from file: R1400Data\n",
+      " Loaded sheet description: مشخصات پرسشنامه\n",
+      "Sheet name from sheets_desc dict: P1. Sheet name from file: R1400P1\n",
+      " Loaded sheet description: قسمت یکم: خصوصیات اجتماعی اعضای خانوار\n",
+      "Sheet name from sheets_desc dict: P2. Sheet name from file: R1400P2\n",
+      " Loaded sheet description: قسمت دوم: مشخصات محل سکونت\n",
+      "Sheet name from sheets_desc dict: P3S07. Sheet name from file: R1400P3S07\n",
+      " Loaded sheet description: قسمت سوم: بخش ۷ هزینه‌های حمل و نقل خانوار در ماه گذشته\n",
+      "Sheet name from sheets_desc dict: P3S11. Sheet name from file: R1400P3S11\n",
+      " Loaded sheet description: قسمت سوم: بخش ۱۱ هزینه‌های غذاهای آماده، هتل و رستوران خانوار در ماه گذشته\n",
+      "Sheet name from sheets_desc dict: P3S13. Sheet name from file: R1400P3S13\n",
+      " Loaded sheet description: قسمت سوم: بخش ۱۳ سایر هزینه‌ها و انتقالات در ۱۲ ماه گذشته\n",
+      "Sheet name from sheets_desc dict: P4S01. Sheet name from file: R1400P4S01\n",
+      " Loaded sheet description: قسمت چهارم: بخش ۱ درآمد پولی اعضای شاغل خانوار از مشاغل مزد و حقوق بگیری\n",
+      "Sheet name from sheets_desc dict: P4S02. Sheet name from file: R1400P4S02\n",
+      " Loaded sheet description: قسمت چهارم: بخش ۲ درآمد پولی اعضای شاغل خانوار از مشاغل غیر مزد و حقوق بگیری (آزاد)\n",
+      "Sheet name from sheets_desc dict: P4S03. Sheet name from file: R1400P4S03\n",
+      " Loaded sheet description: قسمت چهارم: بخش ۳ درآمدهای متفرقه خانوار در ۱۲ ماه گذشته\n",
+      "Sheet name from sheets_desc dict: P4S04. Sheet name from file: R1400P4S04\n",
+      " Loaded sheet description: قسمت چهارم: ستون ۹ بخش ۳ شامل وام و یارانه\n",
+      "Sheet name from sheets_desc dict: Data. Sheet name from file: R1401Data\n",
+      " Loaded sheet description: مشخصات پرسشنامه\n",
+      "Sheet name from sheets_desc dict: P1. Sheet name from file: R1401P1\n",
+      " Loaded sheet description: قسمت یکم: خصوصیات اجتماعی اعضای خانوار\n",
+      "Sheet name from sheets_desc dict: P2. Sheet name from file: R1401P2\n",
+      " Loaded sheet description: قسمت دوم: مشخصات محل سکونت\n",
+      "Sheet name from sheets_desc dict: P3S07. Sheet name from file: R1401P3S07\n",
+      " Loaded sheet description: قسمت سوم: بخش ۷ هزینه‌های حمل و نقل خانوار در ماه گذشته\n",
+      "Sheet name from sheets_desc dict: P3S11. Sheet name from file: R1401P3S11\n",
+      " Loaded sheet description: قسمت سوم: بخش ۱۱ هزینه‌های غذاهای آماده، هتل و رستوران خانوار در ماه گذشته\n",
+      "Sheet name from sheets_desc dict: P3S13. Sheet name from file: R1401P3S13\n",
+      " Loaded sheet description: قسمت سوم: بخش ۱۳ سایر هزینه‌ها و انتقالات در ۱۲ ماه گذشته\n",
+      "Sheet name from sheets_desc dict: P4S01. Sheet name from file: R1401P4S01\n",
+      " Loaded sheet description: قسمت چهارم: بخش ۱ درآمد پولی اعضای شاغل خانوار از مشاغل مزد و حقوق بگیری\n",
+      "Sheet name from sheets_desc dict: P4S02. Sheet name from file: R1401P4S02\n",
+      " Loaded sheet description: قسمت چهارم: بخش ۲ درآمد پولی اعضای شاغل خانوار از مشاغل غیر مزد و حقوق بگیری (آزاد)\n",
+      "Sheet name from sheets_desc dict: P4S03. Sheet name from file: R1401P4S03\n",
+      " Loaded sheet description: قسمت چهارم: بخش ۳ درآمدهای متفرقه خانوار در ۱۲ ماه گذشته\n",
+      "Sheet name from sheets_desc dict: P4S04. Sheet name from file: R1401P4S04\n",
+      " Loaded sheet description: قسمت چهارم: ستون ۹ بخش ۳ شامل وام و یارانه\n",
+      "Sheet name from sheets_desc dict: Data. Sheet name from file: R98Data\n",
+      " Loaded sheet description: مشخصات پرسشنامه\n",
+      "Sheet name from sheets_desc dict: P1. Sheet name from file: R98P1\n",
+      " Loaded sheet description: قسمت یکم: خصوصیات اجتماعی اعضای خانوار\n",
+      "Sheet name from sheets_desc dict: P2. Sheet name from file: R98P2\n",
+      " Loaded sheet description: قسمت دوم: مشخصات محل سکونت\n",
+      "Sheet name from sheets_desc dict: P3S07. Sheet name from file: R1399P3S07\n",
+      " Loaded sheet description: قسمت سوم: بخش ۷ هزینه‌های حمل و نقل خانوار در ماه گذشته\n",
+      "Sheet name from sheets_desc dict: P3S11. Sheet name from file: R1399P3S11\n",
+      " Loaded sheet description: قسمت سوم: بخش ۱۱ هزینه‌های غذاهای آماده، هتل و رستوران خانوار در ماه گذشته\n",
+      "Sheet name from sheets_desc dict: P3S13. Sheet name from file: R1399P3S13\n",
+      " Loaded sheet description: قسمت سوم: بخش ۱۳ سایر هزینه‌ها و انتقالات در ۱۲ ماه گذشته\n",
+      "Sheet name from sheets_desc dict: P4S01. Sheet name from file: R1399P4S01\n",
+      " Loaded sheet description: قسمت چهارم: بخش ۱ درآمد پولی اعضای شاغل خانوار از مشاغل مزد و حقوق بگیری\n",
+      "Sheet name from sheets_desc dict: P4S02. Sheet name from file: R1399P4S02\n",
+      " Loaded sheet description: قسمت چهارم: بخش ۲ درآمد پولی اعضای شاغل خانوار از مشاغل غیر مزد و حقوق بگیری (آزاد)\n",
+      "Sheet name from sheets_desc dict: P4S03. Sheet name from file: R1399P4S03\n",
+      " Loaded sheet description: قسمت چهارم: بخش ۳ درآمدهای متفرقه خانوار در ۱۲ ماه گذشته\n",
+      "Sheet name from sheets_desc dict: P4S04. Sheet name from file: R1399P4S04\n",
+      " Loaded sheet description: قسمت چهارم: ستون ۹ بخش ۳ شامل وام و یارانه\n",
+      "Sheet name from sheets_desc dict: Data. Sheet name from file: R99Data\n",
+      " Loaded sheet description: مشخصات پرسشنامه\n",
+      "Sheet name from sheets_desc dict: P1. Sheet name from file: R99P1\n",
+      " Loaded sheet description: قسمت یکم: خصوصیات اجتماعی اعضای خانوار\n",
+      "Sheet name from sheets_desc dict: P2. Sheet name from file: R99P2\n",
+      " Loaded sheet description: قسمت دوم: مشخصات محل سکونت\n",
+      "Sheet name from sheets_desc dict: P3S07. Sheet name from file: R99P3S07\n",
+      " Loaded sheet description: قسمت سوم: بخش ۷ هزینه‌های حمل و نقل خانوار در ماه گذشته\n",
+      "Sheet name from sheets_desc dict: P3S11. Sheet name from file: R99P3S11\n",
+      " Loaded sheet description: قسمت سوم: بخش ۱۱ هزینه‌های غذاهای آماده، هتل و رستوران خانوار در ماه گذشته\n",
+      "Sheet name from sheets_desc dict: P3S13. Sheet name from file: R99P3S13\n",
+      " Loaded sheet description: قسمت سوم: بخش ۱۳ سایر هزینه‌ها و انتقالات در ۱۲ ماه گذشته\n",
+      "Sheet name from sheets_desc dict: P4S01. Sheet name from file: R99P4S01\n",
+      " Loaded sheet description: قسمت چهارم: بخش ۱ درآمد پولی اعضای شاغل خانوار از مشاغل مزد و حقوق بگیری\n",
+      "Sheet name from sheets_desc dict: P4S02. Sheet name from file: R99P4S02\n",
+      " Loaded sheet description: قسمت چهارم: بخش ۲ درآمد پولی اعضای شاغل خانوار از مشاغل غیر مزد و حقوق بگیری (آزاد)\n",
+      "Sheet name from sheets_desc dict: P4S03. Sheet name from file: R99P4S03\n",
+      " Loaded sheet description: قسمت چهارم: بخش ۳ درآمدهای متفرقه خانوار در ۱۲ ماه گذشته\n",
+      "Sheet name from sheets_desc dict: P4S04. Sheet name from file: R99P4S04\n",
+      " Loaded sheet description: قسمت چهارم: ستون ۹ بخش ۳ شامل وام و یارانه\n",
+      "Sheet name from sheets_desc dict: Data. Sheet name from file: U1400Data\n",
+      " Loaded sheet description: مشخصات پرسشنامه\n",
+      "Sheet name from sheets_desc dict: P1. Sheet name from file: R1400P1\n",
+      " Loaded sheet description: قسمت یکم: خصوصیات اجتماعی اعضای خانوار\n",
+      "Sheet name from sheets_desc dict: P2. Sheet name from file: R1400P2\n",
+      " Loaded sheet description: قسمت دوم: مشخصات محل سکونت\n",
+      "Sheet name from sheets_desc dict: P3S07. Sheet name from file: U1400P3S07\n",
+      " Loaded sheet description: قسمت سوم: بخش ۷ هزینه‌های حمل و نقل خانوار در ماه گذشته\n",
+      "Sheet name from sheets_desc dict: P3S11. Sheet name from file: U1400P3S11\n",
+      " Loaded sheet description: قسمت سوم: بخش ۱۱ هزینه‌های غذاهای آماده، هتل و رستوران خانوار در ماه گذشته\n",
+      "Sheet name from sheets_desc dict: P3S13. Sheet name from file: U1400P3S13\n",
+      " Loaded sheet description: قسمت سوم: بخش ۱۳ سایر هزینه‌ها و انتقالات در ۱۲ ماه گذشته\n",
+      "Sheet name from sheets_desc dict: P4S01. Sheet name from file: U1400P4S01\n",
+      " Loaded sheet description: قسمت چهارم: بخش ۱ درآمد پولی اعضای شاغل خانوار از مشاغل مزد و حقوق بگیری\n",
+      "Sheet name from sheets_desc dict: P4S02. Sheet name from file: U1400P4S02\n",
+      " Loaded sheet description: قسمت چهارم: بخش ۲ درآمد پولی اعضای شاغل خانوار از مشاغل غیر مزد و حقوق بگیری (آزاد)\n",
+      "Sheet name from sheets_desc dict: P4S03. Sheet name from file: U1400P4S03\n",
+      " Loaded sheet description: قسمت چهارم: بخش ۳ درآمدهای متفرقه خانوار در ۱۲ ماه گذشته\n",
+      "Sheet name from sheets_desc dict: P4S04. Sheet name from file: U1400P4S04\n",
+      " Loaded sheet description: قسمت چهارم: ستون ۹ بخش ۳ شامل وام و یارانه\n",
+      "Sheet name from sheets_desc dict: Data. Sheet name from file: U1401Data\n",
+      " Loaded sheet description: مشخصات پرسشنامه\n",
+      "Sheet name from sheets_desc dict: P1. Sheet name from file: R1401P1\n",
+      " Loaded sheet description: قسمت یکم: خصوصیات اجتماعی اعضای خانوار\n",
+      "Sheet name from sheets_desc dict: P2. Sheet name from file: R1401P2\n",
+      " Loaded sheet description: قسمت دوم: مشخصات محل سکونت\n",
+      "Sheet name from sheets_desc dict: P3S07. Sheet name from file: U1401P3S07\n",
+      " Loaded sheet description: قسمت سوم: بخش ۷ هزینه‌های حمل و نقل خانوار در ماه گذشته\n",
+      "Sheet name from sheets_desc dict: P3S11. Sheet name from file: U1401P3S11\n",
+      " Loaded sheet description: قسمت سوم: بخش ۱۱ هزینه‌های غذاهای آماده، هتل و رستوران خانوار در ماه گذشته\n",
+      "Sheet name from sheets_desc dict: P3S13. Sheet name from file: U1401P3S13\n",
+      " Loaded sheet description: قسمت سوم: بخش ۱۳ سایر هزینه‌ها و انتقالات در ۱۲ ماه گذشته\n",
+      "Sheet name from sheets_desc dict: P4S01. Sheet name from file: U1401P4S01\n",
+      " Loaded sheet description: قسمت چهارم: بخش ۱ درآمد پولی اعضای شاغل خانوار از مشاغل مزد و حقوق بگیری\n",
+      "Sheet name from sheets_desc dict: P4S02. Sheet name from file: U1401P4S02\n",
+      " Loaded sheet description: قسمت چهارم: بخش ۲ درآمد پولی اعضای شاغل خانوار از مشاغل غیر مزد و حقوق بگیری (آزاد)\n",
+      "Sheet name from sheets_desc dict: P4S03. Sheet name from file: U1401P4S03\n",
+      " Loaded sheet description: قسمت چهارم: بخش ۳ درآمدهای متفرقه خانوار در ۱۲ ماه گذشته\n",
+      "Sheet name from sheets_desc dict: P4S04. Sheet name from file: U1401P4S04\n",
+      " Loaded sheet description: قسمت چهارم: ستون ۹ بخش ۳ شامل وام و یارانه\n",
+      "Sheet name from sheets_desc dict: Data. Sheet name from file: U1399Data\n",
+      " Loaded sheet description: مشخصات پرسشنامه\n",
+      "Sheet name from sheets_desc dict: P1. Sheet name from file: R1399P1\n",
+      " Loaded sheet description: قسمت یکم: خصوصیات اجتماعی اعضای خانوار\n",
+      "Sheet name from sheets_desc dict: P2. Sheet name from file: R1399P2\n",
+      " Loaded sheet description: قسمت دوم: مشخصات محل سکونت\n",
+      "Sheet name from sheets_desc dict: P3S07. Sheet name from file: U1399P3S07\n",
+      " Loaded sheet description: قسمت سوم: بخش ۷ هزینه‌های حمل و نقل خانوار در ماه گذشته\n",
+      "Sheet name from sheets_desc dict: P3S11. Sheet name from file: U1399P3S11\n",
+      " Loaded sheet description: قسمت سوم: بخش ۱۱ هزینه‌های غذاهای آماده، هتل و رستوران خانوار در ماه گذشته\n",
+      "Sheet name from sheets_desc dict: P3S13. Sheet name from file: U1399P3S13\n",
+      " Loaded sheet description: قسمت سوم: بخش ۱۳ سایر هزینه‌ها و انتقالات در ۱۲ ماه گذشته\n",
+      "Sheet name from sheets_desc dict: P4S01. Sheet name from file: U1399P4S01\n",
+      " Loaded sheet description: قسمت چهارم: بخش ۱ درآمد پولی اعضای شاغل خانوار از مشاغل مزد و حقوق بگیری\n",
+      "Sheet name from sheets_desc dict: P4S02. Sheet name from file: U1399P4S02\n",
+      " Loaded sheet description: قسمت چهارم: بخش ۲ درآمد پولی اعضای شاغل خانوار از مشاغل غیر مزد و حقوق بگیری (آزاد)\n",
+      "Sheet name from sheets_desc dict: P4S03. Sheet name from file: U1399P4S03\n",
+      " Loaded sheet description: قسمت چهارم: بخش ۳ درآمدهای متفرقه خانوار در ۱۲ ماه گذشته\n",
+      "Sheet name from sheets_desc dict: P4S04. Sheet name from file: U1399P4S04\n",
+      " Loaded sheet description: قسمت چهارم: ستون ۹ بخش ۳ شامل وام و یارانه\n",
+      "Sheet name from sheets_desc dict: Data. Sheet name from file: U99Data\n",
+      " Loaded sheet description: مشخصات پرسشنامه\n",
+      "Sheet name from sheets_desc dict: P1. Sheet name from file: R99P1\n",
+      " Loaded sheet description: قسمت یکم: خصوصیات اجتماعی اعضای خانوار\n",
+      "Sheet name from sheets_desc dict: P2. Sheet name from file: R99P2\n",
+      " Loaded sheet description: قسمت دوم: مشخصات محل سکونت\n",
+      "Sheet name from sheets_desc dict: P3S07. Sheet name from file: U99P3S07\n",
+      " Loaded sheet description: قسمت سوم: بخش ۷ هزینه‌های حمل و نقل خانوار در ماه گذشته\n",
+      "Sheet name from sheets_desc dict: P3S11. Sheet name from file: U99P3S11\n",
+      " Loaded sheet description: قسمت سوم: بخش ۱۱ هزینه‌های غذاهای آماده، هتل و رستوران خانوار در ماه گذشته\n",
+      "Sheet name from sheets_desc dict: P3S13. Sheet name from file: U99P3S13\n",
+      " Loaded sheet description: قسمت سوم: بخش ۱۳ سایر هزینه‌ها و انتقالات در ۱۲ ماه گذشته\n",
+      "Sheet name from sheets_desc dict: P4S01. Sheet name from file: U99P4S01\n",
+      " Loaded sheet description: قسمت چهارم: بخش ۱ درآمد پولی اعضای شاغل خانوار از مشاغل مزد و حقوق بگیری\n",
+      "Sheet name from sheets_desc dict: P4S02. Sheet name from file: U99P4S02\n",
+      " Loaded sheet description: قسمت چهارم: بخش ۲ درآمد پولی اعضای شاغل خانوار از مشاغل غیر مزد و حقوق بگیری (آزاد)\n",
+      "Sheet name from sheets_desc dict: P4S03. Sheet name from file: U99P4S03\n",
+      " Loaded sheet description: قسمت چهارم: بخش ۳ درآمدهای متفرقه خانوار در ۱۲ ماه گذشته\n",
+      "Sheet name from sheets_desc dict: P4S04. Sheet name from file: U99P4S04\n",
+      " Loaded sheet description: قسمت چهارم: ستون ۹ بخش ۳ شامل وام و یارانه\n"
+     ]
+    }
+   ],
    "source": [
     "dfs = []\n",
     "\n",
@@ -258,10 +425,12 @@
     "            # مخارج حق بیمه مرتبط با حمل و نقل خانوار\n",
     "            transport_insurance_df = (current_df.loc[current_df.code.isin([125411,125412,125413]), :]\n",
     "                                .groupby(\"Address\").agg({\"value\":\"sum\"})\n",
+    "                                .rename(columns={\"value\": \"transport_insurance_expenses\"})\n",
     "                                .reset_index())\n",
     "            # هزینه های مربوط به خرید وسایل نقلیه و تجهیزات مربوطه\n",
     "            vehicle_expenses_df = (current_df.loc[current_df.code.astype(\"str\").str.match(\"^7[12]\\d+$\")]\n",
     "                            .groupby(\"Address\").agg({\"value\":\"sum\"})\n",
+    "                            .rename(columns={\"value\": \"vehicle_expenses\"})\n",
     "                            .reset_index())\n",
     "            year_df = pd.merge(year_df, transport_insurance_df, how=\"left\", on=\"Address\")\n",
     "            year_df = pd.merge(year_df, vehicle_expenses_df, how=\"left\", on=\"Address\")\n",
@@ -278,7 +447,11 @@
     "        if sheet_index==18:\n",
     "            #Calculating azad income\n",
     "            income_azad_df = pd.read_excel(year_file, year_file.sheet_names[sheet_index])\n",
-    "            income_azad_df = empty_string_remover(income_azad_df).groupby(\"Address\").agg({\"income_s_y\": \"sum\"}).reset_index()\n",
+    "            income_azad_df = empty_string_remover(income_azad_df)\n",
+    "            income_azad_df.income_s_y = pd.to_numeric(income_azad_df.income_s_y, errors='coerce')\n",
+    "            income_azad_df = income_azad_df.dropna(subset=['income_s_y'])\n",
+    "            income_azad_df.income_s_y = income_azad_df.income_s_y.astype(\"int64\")\n",
+    "            income_azad_df = income_azad_df.groupby(\"Address\").agg({\"income_s_y\": \"sum\"}).reset_index()\n",
     "            year_df = pd.merge(year_df, income_azad_df, how=\"left\", on=\"Address\")\n",
     "            del income_azad_df\n",
     "\n",
@@ -309,16 +482,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(dfs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
