--- a/data_loader.ipynb
+++ b/data_loader.ipynb
@@ -39,8 +39,7 @@
    "outputs": [],
    "source": [
     "# These functions are needed to check dtypes and convert if necessary\n",
-    "from pandas.api.types import is_string_dtype\n",
-    "from pandas.api.types import is_numeric_dtype"
+    "from pandas.api.types import is_string_dtype"
    ]
   },
   {
@@ -346,7 +345,7 @@
     "                current_df = current_df.loc[current_df.JaygozinDescC.isna(), :]\n",
     "\n",
     "            # We only consider addresses from this dataframe and do left join with other dfs\n",
-    "            year_df = current_df.loc[:, [\"Address\", \"Urban\", \"Year\", \"khanevartype\", \"province\", \"town\"]].copy()\n",
+    "            year_df = current_df.loc[:, [\"Address\", \"Urban\", \"Year\", \"Fasl\", \"khanevartype\", \"province\", \"town\"]].copy()\n",
     "            del current_df\n",
     "\n",
     "        if sheet_index==1:\n",
@@ -421,6 +420,7 @@
     "        if sheet_index==15:\n",
     "            current_df = pd.read_excel(year_file, year_file.sheet_names[sheet_index])\n",
     "            current_df = empty_string_remover(current_df)\n",
+    "            current_df.value = pd.to_numeric(current_df.value, errors='coerce')\n",
     "            current_df.value = current_df.value.fillna(0).astype(\"int64\")\n",
     "            # مخارج حق بیمه مرتبط با حمل و نقل خانوار\n",
     "            transport_insurance_df = (current_df.loc[current_df.code.isin([125411,125412,125413]), :]\n",
@@ -515,7 +515,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_df.to_pickle(\"prediction_features_df.pkl\")"
+    "final_df.to_pickle(\"prediction_features_df.pkl\").reset_index(drop=True)"
    ]
   },
   {
